working on receive method

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <label for="email">Email:</label> <input type="email" name="email"> 
     <input name="sendInfo" type="submit" value="Submit">
 </form>
+<h2>New Posts</h2>
+<ul id="linksList">
+    
+</ul>
 </h1>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="main.js"></script>
